First commit of HamburgerMenu

--- a/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
+++ b/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
+    <Content Include="Icons\Foundation.png" />
     <Content Include="Icons\Layouts.png" />
     <Content Include="Samples\samples.json" />
   </ItemGroup>
@@ -131,6 +132,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Microsoft.Windows.Toolkit.UI.LayoutControls\Microsoft.Windows.Toolkit.UI.LayoutControls.csproj">
+      <Project>{e9faabfb-d726-42c1-83c1-cb46a29fea81}</Project>
+      <Name>Microsoft.Windows.Toolkit.UI.LayoutControls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Microsoft.Windows.Toolkit\Microsoft.Windows.Toolkit.csproj">
       <Project>{805F80DF-75C6-4C2F-8FD9-B47F6D0DF5A3}</Project>
       <Name>Microsoft.Windows.Toolkit</Name>
