twitter and facebook scenarios now working, and also including search query support in designer for each provider

--- a/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
+++ b/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
@@ -42,6 +42,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Core\ConnectedServiceDataConfigAttribute.cs" />
+    <Compile Include="Core\ConnectedServiceDataConfigQueryStringParamAttribute.cs" />
     <Compile Include="Core\ConnectedServiceOAuthAttribute.cs" />
     <Compile Include="Core\ConnectedServiceProviderAttribute.cs" />
     <Compile Include="Core\ExtensionMethods.cs" />
