--- a/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
+++ b/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
@@ -91,7 +91,9 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
