Added xmldoc flag

--- a/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
+++ b/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
@@ -28,6 +28,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>ExtendedDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <DocumentationFile>bin\Debug\Microsoft.Windows.Toolkit.Services.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
