--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/Microsoft.Windows.Toolkit.UI.LayoutControls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/Microsoft.Windows.Toolkit.UI.LayoutControls.csproj
@@ -27,6 +27,7 @@
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Microsoft.Windows.Toolkit.UI.LayoutControls.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
