--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/Microsoft.Windows.Toolkit.UI.Controls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/Microsoft.Windows.Toolkit.UI.Controls.csproj
@@ -48,6 +48,7 @@
     <Compile Include="HamburgerMenu\HamburgerMenu.Events.cs" />
     <Compile Include="HamburgerMenu\HamburgerMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VariableSizedGrid\VariableSizedGrid.Properties.cs" />
     <Compile Include="VariableSizedGrid\VariableSizedGrid.cs" />
     <Compile Include="VariableSizedGrid\VariableSizedGridPanel.cs" />
   </ItemGroup>
