--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/Microsoft.Windows.Toolkit.UI.Controls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/Microsoft.Windows.Toolkit.UI.Controls.csproj
@@ -50,7 +50,7 @@
     <Compile Include="HamburgerMenu\HamburgerMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchBox\SearchBox.cs" />
-    <Compile Include="SearchBox\SearchBox.Member.cs" />
+    <Compile Include="SearchBox\SearchBox.Properties.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="HamburgerMenu\HamburgerMenu.xaml">
