First version of SampleApp engine

--- a/Microsoft.Windows.Toolkit/Microsoft.Windows.Toolkit.csproj
+++ b/Microsoft.Windows.Toolkit/Microsoft.Windows.Toolkit.csproj
@@ -42,6 +42,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Helpers.VisualTree.cs" />
     <Compile Include="Helpers\Helpers.Compression.cs" />
     <Compile Include="Helpers\Helpers.Streams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
