--- a/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
+++ b/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
@@ -91,6 +91,30 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\Photos\BigFourSummerHeat.png" />
+    <Content Include="Assets\Photos\BisonBadlandsChillin.png" />
+    <Content Include="Assets\Photos\ColumbiaRiverGorge.png" />
+    <Content Include="Assets\Photos\GiantSlabInOregon.png" />
+    <Content Include="Assets\Photos\GrandTetons.png" />
+    <Content Include="Assets\Photos\LakeAnnMushroom.png" />
+    <Content Include="Assets\Photos\LunchBreak.png" />
+    <Content Include="Assets\Photos\MilkyWayStHelensHikePurple.png" />
+    <Content Include="Assets\Photos\MitchellButtes.png" />
+    <Content Include="Assets\Photos\MultnomahFalls.png" />
+    <Content Include="Assets\Photos\NorthernCascadesReflection.png" />
+    <Content Include="Assets\Photos\NovemberHikeWaterfall.png" />
+    <Content Include="Assets\Photos\OregonWineryNamaste.png" />
+    <Content Include="Assets\Photos\Owl.png" />
+    <Content Include="Assets\Photos\PaintedHillsPathway.png" />
+    <Content Include="Assets\Photos\RunningDogPacificCity.png" />
+    <Content Include="Assets\Photos\ShootingOnAutoOnTheDrone.png" />
+    <Content Include="Assets\Photos\SmithnRockDownTheRiverView.png" />
+    <Content Include="Assets\Photos\SnowyInterbayt.png" />
+    <Content Include="Assets\Photos\SpeedTripleAtristsPoint.png" />
+    <Content Include="Assets\Photos\Van.png" />
+    <Content Include="Assets\Photos\WestSeattleView.png" />
+    <Content Include="SamplePages\VariableSizedGridCode.txt" />
+    <Content Include="Assets\Photos\Photos.json" />
     <None Include="project.json" />
     <Content Include="Assets\Html\CSharp.html" />
     <Content Include="Assets\Html\Json.html" />
@@ -114,11 +138,15 @@
     <Compile Include="Controls\PropertyControl.xaml.cs">
       <DependentUpon>PropertyControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Data\PhotosDataSource.cs" />
     <Compile Include="Models\PropertyDescriptor\ValueHolder.cs" />
     <Compile Include="Models\PropertyDescriptor\PropertyOptions.cs" />
     <Compile Include="Models\PropertyDescriptor\PropertyKind.cs" />
     <Compile Include="Models\PropertyDescriptor\PropertyDescriptor.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="SamplePages\VariableSizedGridPage.xaml.cs">
+      <DependentUpon>VariableSizedGridPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
     </Compile>
@@ -164,6 +192,10 @@
     <Page Include="Controls\PropertyControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SamplePages\VariableSizedGridPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Shell.xaml">
       <Generator>MSBuild:Compile</Generator>
