--- a/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
@@ -40,6 +40,9 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Compile Include="Extensions\MathExtensions.cs" />
+    <Compile Include="Pivorama\Pivorama.Properties.cs" />
+    <Compile Include="Pivorama\PivoramaPanel.Items.cs" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -49,6 +52,9 @@
     <Compile Include="HamburgerMenu\HamburgerMenu.Properties.cs" />
     <Compile Include="HamburgerMenu\HamburgerMenu.Events.cs" />
     <Compile Include="HamburgerMenu\HamburgerMenu.cs" />
+    <Compile Include="Pivorama\Pivorama.cs" />
+    <Compile Include="Pivorama\PivoramaPanel.cs" />
+    <Compile Include="Pivorama\PivoramaPanel.Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchBox\SearchBox.cs" />
     <Compile Include="SearchBox\SearchBox.Properties.cs" />
