--- a/Microsoft.Windows.Toolkit.UI/Microsoft.Windows.Toolkit.UI.csproj
+++ b/Microsoft.Windows.Toolkit.UI/Microsoft.Windows.Toolkit.UI.csproj
@@ -43,7 +43,12 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\BoolToSizeConverter.cs" />
+    <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converters\CollectionVisibilityConverter.cs" />
+    <Compile Include="Converters\ConverterTools.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
+    <Compile Include="Converters\StringVisibilityConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
