--- a/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Microsoft.Windows.Toolkit.UI.Controls.csproj
@@ -49,6 +49,9 @@
     <Compile Include="HamburgerMenu\HamburgerMenu.Properties.cs" />
     <Compile Include="HamburgerMenu\HamburgerMenu.Events.cs" />
     <Compile Include="HamburgerMenu\HamburgerMenu.cs" />
+    <Compile Include="ImageEx\ImageEx.cs" />
+    <Compile Include="ImageEx\ImageEx.Members.cs" />
+    <Compile Include="ImageEx\ImageEx.Source.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchBox\SearchBox.cs" />
     <Compile Include="SearchBox\SearchBox.Properties.cs" />
@@ -65,6 +68,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
+    <Page Include="ImageEx\ImageEx.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="RangeSelector\RangeSelector.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -89,7 +96,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Microsoft.Windows.Toolkit.UI\Microsoft.Windows.Toolkit.UI.csproj">
+      <Project>{3DD8AA7C-3569-4E51-992F-0C2257E8878E}</Project>
+      <Name>Microsoft.Windows.Toolkit.UI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
