--- a/Microsoft.Windows.Toolkit.UI.Animations/Microsoft.Windows.Toolkit.UI.Animations.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Animations/Microsoft.Windows.Toolkit.UI.Animations.csproj
@@ -43,7 +43,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\AnimationExtensions.cs" />
+    <Compile Include="Extensions\Extensions.Animation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
