--- a/Microsoft.Windows.Toolkit.UI/Microsoft.Windows.Toolkit.UI.csproj
+++ b/Microsoft.Windows.Toolkit.UI/Microsoft.Windows.Toolkit.UI.csproj
@@ -49,8 +49,9 @@
     <Compile Include="Converters\ConverterTools.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
     <Compile Include="Converters\StringVisibilityConverter.cs" />
+    <Compile Include="Extensions\Extensions.Color.cs" />
     <Compile Include="Extensions\Extensions.Transform.cs" />
-    <Compile Include="Extensions\Extension.VisualTree.cs" />
+    <Compile Include="Extensions\Extensions.VisualTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
