--- a/Microsoft.Windows.Toolkit/Microsoft.Windows.Toolkit.csproj
+++ b/Microsoft.Windows.Toolkit/Microsoft.Windows.Toolkit.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Helpers\Helpers.Connections.cs" />
     <Compile Include="Helpers\Helpers.Math.cs" />
     <Compile Include="Helpers\Helpers.Compression.cs" />
+    <Compile Include="Helpers\Helpers.StorageFile.cs" />
     <Compile Include="Helpers\Helpers.Streams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Microsoft.Windows.Toolkit.rd.xml" />
